mockiato_codegen/tests/ui/const-method.stderr
error: `const` methods are not supported
 --> $DIR/const-method.rs:5:5
  |
5 |     const fn bar(&self, baz: u64);
  |     ^^^^^

error: aborting due to previous error

